# spin-test-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  diff
crates/e2e-testing/: Cargo.toml
crates/e2e-testing/src/: asserts.rs  cloud_controller.rs  cmd.rs  controller.rs  fc_controller.rs  lib.rs  metadata_extractor.rs  spin.rs  spin_controller.rs  testcase.rs  testcases.rs  utils.rs
src/: lib.rs
tests/: cloud_tests.rs  e2e-tests.rs  fermyon_cloud_test.rs  spinup_test.rs  spinup_tests.rs
tests/testcases/: mod.rs
